# mcx_hrms

./: .gitignore  CLIENT_DEMO_GUIDE.md  README.md  license.txt  pyproject.toml
mcx_hrms/: constants.py  hooks.py  modules.txt  patches.txt
mcx_hrms/api/: training.py
mcx_hrms/fixtures/: custom_field.json
mcx_hrms/mcx_hrms/: training_bridge.py
mcx_hrms/setup/: demo.py  hr_lifecycle.py  install.py  production_gates.py  settings.py  transactions.py  uat.py  workflows.py
