[project]
name = "mcx_hrms"
authors = [
    { name = "Ascra Technologies LLP", email = "info@ascra.com" }
]
description = "MCX HRMS demo setup — workflows, LMS training bridge, and UAT seed"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<=17.0.0-dev"
hrms = ">=16.0.0"
erpnext = ">=16.0.0"
# LMS is optional — training bridge features activate when lms is installed
lms = ">=2.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501", "W191", "W293", "I001"]
